more spacing issues

--- a/style/style.css
+++ b/style/style.css
@@ -133,11 +133,6 @@ body {
 
 	}
 
-	.jumbotron-custom {
-		width: 90% !important;
-		padding: 0px !important;
-	}
-
 	.container {
 		margin: 0px;
 		padding: 0px;
